syntax = "proto3";
package imakara_admin;


